# Mentor_Project

./: README.md  pyproject.toml
data/: english_names.txt  names.txt  russian_names.txt
src/: main.py
