[tool.poetry]
name = "mentor-project"
version = "0.1.0"
description = "'Collaboration with a mentor'"
authors = ["Donskov Andrey <bionet1971@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
