[tool.poetry]
name = "mentor-project"
version = "0.1.0"
description = "'Collaboration with a mentor'"
authors = ["Donskov Andrey <bionet1971@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
